Support for creating Comments without a post_id
